# quizforge

./: .gitignore  AGENT_SPEC_V2.md  CLAUDE.md  FINISHPLAN.md  FINISHPLAN_HUMAN.md  IMPLEMENTATION_PLAN.md  MASTER_SPEC.md  P1_QUESTION_EDITOR.md  P2_PLAYER_RENDERERS.md  P3_RESULT_PIPELINE.md  README.md  STATUS_REPORT.md  TASK_PROGRESS.md  WORK_LOG.md  package.json  pnpm-lock.yaml  task.md  tsconfig.base.json  turbo.json
.github/workflows/: build-creator.yml  build-player.yml  ci.yml  release.yml
apps/creator/: package.json  tailwind.config.js
apps/creator/src/: index.css  main.tsx  router.tsx
apps/creator/src-tauri/: Cargo.toml  errors.txt  errors_final.txt  errors_final_utf8.txt  errors_utf8.txt  tauri.conf.json
apps/creator/src-tauri/src/: error.rs  lib.rs  main.rs
apps/creator/src-tauri/src/commands/: export_commands.rs  import_commands.rs  media_commands.rs  mod.rs  network_commands.rs  question_commands.rs  quiz_commands.rs  result_commands.rs  settings_commands.rs  student_commands.rs  updater_commands.rs
apps/creator/src-tauri/src/database/: mod.rs
apps/creator/src-tauri/src/models/: quiz.rs
apps/creator/src-tauri/src/network/: server.rs
apps/creator/src/components/: BrandingDialog.tsx  ErrorBoundary.tsx  ExportDialog.tsx  ImportExcelDialog.tsx  ImportWordDialog.tsx  Player.tsx  QuestionEditorDialog.tsx  QuizPropertiesDialog.tsx  RichTextEditor.tsx  StudentListDialog.tsx  ThemeEditorDialog.tsx
apps/creator/src/hooks/: useMedia.ts  useMonitor.ts  useQuestions.ts  useQuizzes.ts
apps/creator/src/lib/: queryClient.ts  tiptap-font-size.ts
apps/creator/src/pages/: Dashboard.tsx  PlayerPage.tsx  QuizEditor.tsx  ReceiveMode.tsx  Settings.tsx  WelcomeScreen.tsx
apps/creator/src/store/: appStore.ts
apps/player/: index.html  package.json  player_errors.txt
apps/player/src/: App.tsx  index.css
apps/player/src-tauri/: Cargo.toml  build_error.txt  errors.txt  new_errors.txt  output.txt  player_check_errors_utf8.txt  tauri.conf.json
apps/player/src-tauri/src/: lib.rs  main.rs
apps/player/src-tauri/src/commands/: lockdown_commands.rs  mod.rs  network.rs  quiz_loader.rs  result.rs  updater.rs  validate.rs
apps/player/src-tauri/src/security/: crypto.rs  mod.rs  mutex.rs
apps/player/src/components/: DetailsScreen.tsx  LockdownOverlay.tsx  (+4 more)
apps/web/: check-db.js  next.config.ts  package.json  test-github-plain.js  test-github.js
apps/web/prisma/: schema.prisma
apps/web/src/: auth.ts  middleware.ts
docs/: AGENTS_KNOWLEDGE_BASE.md  RELEASE_GUIDE.md  USER_GUIDE.md
docs/migrate/: migration_plan.md  requirement.md
docs/upgrade/: AGENT_PLAN_v3.1.md  QuizForge_Player_UI_Spec_v3.docx
images/: Untitled.doc  Untitled.xls
scripts/: bump-version.sh
(+53 files in other folders)
