[package]
name = "quizforge-player"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quizforge_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = "1.22.0"
machine-uid = "0.5.4"
mdns-sd = "0.18.1"
named-lock = "0.4.1"
flate2 = "1.0"

